test/e2e/valid/bufwrite.mylang
{
    buffer my_buffer: int32 = 128;
    define w1 of int32 = bufwrite(my_buffer, 42);
    define w2 of int32 = bufwrite(my_buffer, 99);
}
