test/e2e/invalid/bufwriteinvalid.mylang
{
buffer buf : int32 = 3;
define mut dummy of int32 = 0;
dummy = bufwrite ( buf , 1) ;
dummy = bufwrite ( buf , 2) ;
dummy = bufwrite ( buf , 3) ;
dummy = bufwrite ( buf , 4) ; 
dummy = bufwrite ( buf , 5) ; 
}